feat: 前后端支持中英文国际化
后端消息按模块拆为 i18n 资源，错误码、业务提示、枚举名称、权限目录、
导出表头与邮件文案改为消息键；校验注解的 message 也存消息键，由全局异常
处理按请求语言解析。语言取 lang 参数或 Accept-Language，支持 zh-CN 与
en，默认 zh-CN，TraceFilter 在链路最前端写入 LocaleContextHolder。

前端接入 vue-i18n 与 Element Plus 语言包，右上角可切换中英文并持久化，
请求带 Accept-Language 与界面语言保持一致。

新增 MessageBundleTest 校验中英文键一一对应，并覆盖错误码、权限目录与
校验消息键的文案完整性。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KVfcxs8WuUYV1tN9HMadz3